fix: gap between hero + nav

--- a/docs/css/src/hero.css
+++ b/docs/css/src/hero.css
@@ -44,7 +44,7 @@
     padding: 6em var(--unit-gap) 5.25em;
     width: 100%;
     position: relative;
-    margin: -30px auto 0;
+    margin: -32px auto 0;
   }
 
   .hero-illustration {
